# test-pydantic-sqlmodel-conversion

./: pyproject.toml
src/test_pydantic_sqlmodel_conversion/: __init__.py
